<resources>
    <string name="app_name">AsilApp</string>
    <string-array name="gender">
        <item><b>Maschio</b></item>
        <item><b>Femmina</b></item>
        <item><b>Non specificato</b></item>
    </string-array>
    <string-array name="genere">
        <item>Maschio</item>
        <item>Femmina</item>
        <item>Non specificato</item>
    </string-array>
    <string name="navigation_drawer_open">Apri il menu di navigazione</string>
    <string name="navigation_drawer_close">Chiudi il menu di navigazione</string>
    <string name="checkName">Inserisci un nome valido!</string>
    <string name="checkSurname">Inserisci un cognome valido!</string>
    <string name="checkStudioName">Inserisci un nome di studio valido</string>
    <string name="checkEmail">Inserisci un indirizzo email valido</string>
    <string name="checkPassword">Inserisci una password valida!</string>
    <string name="checkBirthdate">Inserire la data di nascita valida!</string>
    <string name="checkPlaceBirth">Inserire luogo di nascita valido!</string>
    <string name="checkNationality">Inserire nazionalità valida!</string>
    <string name="checkPassword2">Le password non corrispondono!</string>
    <string name="checkAddress">Inserisci un indirizzo valido!</string>
    <string name="checkPhone">Inserisci un numero di telefono valido!</string>
    <string name="successful">Operazione riuscita</string>
    <string name="failed">Operazione fallita</string>
    <string name="logoutSucc">Logout effettuato con successo</string>
    <string name="noConnMess">"Connessione assente. Verifica la tua connessione Internet e riprova."</string>
    <string name="nocConn">Connessione assente</string>
    <string name="trytry">Riprovare</string>
    <string name="exit">Esci</string>
    <string name="loginFailed">Accesso NON RIUSCITO! - Nome paziente o password non corretti!</string>
    <string name="loginSucc">Accesso riuscito</string>
    <string name="checkEmailReq">L\'email è obbligatoria!</string>
    <string name="checkEmailResetPass">Controlla la tua email per reimpostare la password</string>
    <string name="failedPassword">Riprova! Si è verificato un errore!</string>
    <string name="cityInfo">Info sulla tua zona</string>
    <string name="infos">Informazioni Generali</string>
    <string name="postOffices">Uffici Postali</string>
    <string name="schools">Scuole</string>
    <string name="churches">Chiese</string>
    <string name="hospitals">Ospedali</string>
    <string name="city_info_title">Info sulla tua nuova città</string>
    <string name="title_activity_places_of_interest">PlacesOfInterestActivity</string>
    <string name="info_icon_desc">Info icon</string>
    <string name="places_icon_desc">Posti icon</string>
    <string name="places">Luoghi d\'interesse</string>
    <string name="searchEditText">Ricerca di qualsiasi luogo...</string>
    <string name="search_icon_button">Pulsante di ricerca icona</string>
    <string name="nearby_schools_button_desc">Pulsante scuole vicine</string>
    <string name="nearby_hospitals_button_desc">Pulsante ospedali vicini</string>
    <string name="zoom_in_text">Zoom In</string>
    <string name="zoom_out_text">Zoom Out</string>
    <string name="zoom_out">zoom out desc</string>
    <string name="zoom_in">zoom in desc</string>
    <string name="numbers">Numeri Utili</string>
    <string name="doctor_icon_desc">Doctor Icon</string>
    <string name="useful_numbers_text">Numeri Utili</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="police_icon_desc">Icona Polizia</string>
    <string name="firefighters_icon_desc">Icona Pompieri</string>
    <string name="ambulance_icon_desc">Icona Ambulanza</string>
    <string name="ambulanceNumber">118</string>
    <string name="policeNumber">113</string>
    <string name="docNumber">3207505770</string>
    <string name="firefighterNumber">115</string>
    <string name="police_text">Polizia</string>
    <string name="firefighters_text">Pompieri</string>
    <string name="ambulance_text">Ambulanza</string>
    <string name="doc_text">Dottore</string>
    <string name="numeri_utili_btn_text">Numeri Utili</string>
    <string name="sos_btn_text">SOS</string>
    <string name="street_placeholder">Via/Viale/Strada: </string>
    <string name="city_placeholder">Paese/Città: </string>
    <string name="provincia_placeholder">Provincia: </string>
    <string name="regione_placeholder">Regione: </string>
    <string name="telephone_placeholder">"Telefono: "</string>
    <string name="email_placeholder">"Email: "</string>
    <string name="unknownDevice">Dispositivo sconosciuto</string>
    <string name="dissociateDeviceSucc">Dispositivo dissociato con successo.</string>
    <string name="dissociateDeviceFail">Errore durante la dissociare del dispositivo.</string>
    <string name="warningRequestPermissions">È necessaria l\' autorizzazione di scansione Bluetooth per rilevare i dispositivi.</string>
    <string name="enableBluetoothSucc">Bluetooth è abilitato correttamente. Rendere il dispositivo rilevabile.</string>
    <string name="enableBluetoothFail">Attivazione Bluetooth annullata o non riuscita.</string>
    <string name="deviceDiscoverableSucc">Il dispositivo è ora rilevabile.</string>
    <string name="deviceDiscoverableFail">Rilevamento dispositivo annullato o non riuscito.</string>
    <string name="pairing">Associazione con: </string>
    <string name="unPairing">Dissociazione con: </string>
    <string name="medical_records">Medical Records</string>
    <string name="temperature">Temperatura</string>
    <string name="add">Add</string>
    <string name="pressure">Pressione</string>
    <string name="glycemia">Glicemia</string>
    <string name="heartbeat">Battito</string>
    <string name="symptoms">Sintomi</string>
    <string name="hypertension">Ipertensione</string>
    <string name="diabetes">Diabete</string>
    <string name="tremor">Tremore</string>
    <string name="androidqrcodereader">AndroidQrCodeReader</string>
    <string name="nome_string">Nome</string>
    <string name="cognome_string">Cognome</string>
    <string name="change_to_menu">CHANGE TO MENU</string>
    <string name="close_user_card">Close User Card</string>
    <string name="change_to_profileCard">CAMBIA SUL PROFILO</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="noDataFound">Nessun dato trovato</string>
    <string name="costDelete">Sei sicuro di voler eliminare</string>
    <string name="noUndo">L\'eliminazione dei dati non può essere annullata</string>
    <string name="delete">Elimina</string>
    <string name="cancel">Annulla</string>
    <string name="canc">Annullato</string>
    <string name="succDelete">Eliminato con successo!</string>
    <string name="tryAgain">Errore, riprova</string>
    <string name="checkPrice">Inserisci un prezzo valido!</string>
    <string name="checkQuantity">Inserisci una quantità valida!</string>
    <string name="invCategory">Categoria non valida</string>
    <string name="succAddCost">Costo aggiunto con successo!</string>
    <string name="documents">Documenti</string>
    <string name="Successfully_saved">Salvato con successo!</string>
    <string name="failed_saving_document">Salvataggio fallito!</string>
    <string name="image">Immagine</string>
    <string name="failedDeta">Seleziona una data precedente o uguale alla data corrente</string>
    <string name="failedloadCentriAccoglienza">Errore nel recupero dei centri di accoglienza</string>
    <string name="maschio">Maschio</string>
    <string name="femmina">Femmina</string>
    <string name="nousersfound">Nessun utente trovato</string>
    <string name="nopatientfound">PAZIENTE NON TROVATO</string>
    <string name="aggiungi_spesa">Aggiungi spesa</string>
    <string name="seleziona_la_categoria_del_costo">Seleziona la categoria del costo</string>
    <string name="nome_prodotto">Nome prodotto</string>
    <string name="quantit">Quantità</string>
    <string name="prezzo">Prezzo</string>
    <string name="registra_paziente">Registra paziente</string>
    <string name="nome">Nome</string>
    <string name="cognome">Cognome</string>
    <string name="data_di_nascita">Data di nascita</string>
    <string name="luogo_di_nascita">Luogo di nascita</string>
    <string name="nazionalit">Nazionalità</string>
    <string name="centro_ospitante">Centro Ospitante</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="registra">Registra</string>
    <string name="costi_sostenuti">Costi sostenuti</string>
    <string name="misurazoni_effettuate">Misurazoni effettuate</string>
    <string name="ricerca_dispositivi_nel_conteitore">Ricerca dispositivi nel conteitore</string>
    <string name="dispositivi_rilevati">Dispositivi rilevati</string>
    <string name="paziente">Paziente</string>
    <string name="dottore">Dottore</string>
    <string name="nome_studio">Sede Lavorativa</string>
    <string name="indirizzo">Indirizzo</string>
    <string name="modifica">Modifica</string>
    <string name="reimposta_password">Inserisci la tua email per reimpostare la password :</string>
    <string name="prosegui">Prosegui</string>
    <string name="profilo">Profilo</string>
    <string name="lista_utenti">Lista Utenti</string>
    <string name="scan_qr">Scan QR</string>
    <string name="misurazioni">Misurazioni</string>
    <string name="costi">Costi</string>
    <string name="cara">CARA</string>
    <string name="info">Info</string>
    <string name="i_miei_utenti">I miei utenti</string>
    <string name="password">Password</string>
    <string name="recupera_password">Recupera password?</string>
    <string name="login">Login</string>
    <string name="registrati">Registrati</string>
    <string name="asilapp">AsilApp</string>
    <string name="modifica_il_tuo_profilo">Modifica il tuo profilo</string>
    <string name="salva_le_modifiche">Salva le modifiche</string>
    <string name="registati">Registati</string>
    <string name="n_b_possono_registrarsi_solo_i_personali_autorizzati">N.B. Possono registrarsi solo i personali autorizzati!</string>
    <string name="conferma_password">Conferma Password</string>
    <string name="anno_di_nascita">Anno di nascita</string>
    <string name="centro_di_accoglienza">Centro di accoglienza</string>
    <string name="et">Età</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data</string>
    <string name="effettua_nuove_misurazioni">Effettua nuove misurazioni</string>
    <string name="termina">Termina</string>
    <string name="inserisci_la_password">Inserisci la password</string>
    <string name="nessun_documento_trovato">Nessun documento trovato</string>
    <string name="succAddDocument">Documento aggiunto con successo!</string>
    <string name="succAddMeasurement">Misurazione effettuata con successo!</string>
    <string name="aggiungi_documento">Aggiungi documento</string>
    <string name="nome_documento">Nome documento</string>
    <string name="no">No</string>
    <string name="si">Si</string>
    <string name="salvare_il_risultato">Salvare il risultato?</string>
    <string name="il_risultato_della_misurazione">Il risultato della misurazione è:</string>
    <string name="document_not_found">Documento non trovato</string>
    <string name="share_document_using">Condividi documento usando</string>
    <string name="unable_to_open_document">Impossibile aprire il documento</string>
    <string name="download_failed">Download non riuscito</string>
    <string name="lingua">Lingua</string>
    <string name="logout">Logout</string>
    <string name="home">Home</string>
    <string name="italiano">Italiano</string>
    <string name="inglese">Inglese</string>
    <string name="francese">Francese</string>
    <string name="dove_si_trova">Dove si trova:</string>
</resources>