<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Paziente.PazienteFragment.InfoCentroFragment.WhereFragment">

    <TextView
        android:id="@+id/whereText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/dove_si_trova"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="20dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location">

            <TextView
                android:id="@+id/street"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/street_placeholder"
                android:textSize="15sp"

                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@id/city"/>

            <TextView
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/city_placeholder"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/street"
                app:layout_constraintBottom_toTopOf="@id/provincia"/>

            <TextView
                android:id="@+id/provincia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/provincia_placeholder"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/city"
                app:layout_constraintBottom_toTopOf="@id/regione"/>

            <TextView
                android:id="@+id/regione"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/regione_placeholder"
                android:textSize="15sp"
                android:textStyle="bold"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/provincia"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>