<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/lavender_border"
            android:orientation="vertical"
            android:padding="24dp">

            <Button
                android:id="@+id/btnIta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/lavender_border"
                android:text="@string/italiano"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnEn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/lavender_border"
                android:text="@string/inglese"
                android:textSize="18sp" />
            <Button
                android:id="@+id/btnFr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/lavender_border"
                android:text="@string/francese"
                android:textSize="18sp" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
